# dormsphere

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  test_db.ts
backend/: package.json  test-cloud.js  test-db.js  tsconfig.json
backend/scripts/: checkSeed.js  loadTest.js  migrateCommunity.js  testBcrypt.js
backend/src/: server.ts
backend/src/db/: connection.ts  seed.ts
backend/src/middleware/: auth.ts  upload.ts
backend/src/models/: Asset.ts  Election.ts  Grievance.ts  Hostel.ts  InfraStatus.ts  LotteryRank.ts  Match.ts  Otp.ts  Outpass.ts  Room.ts  RoomAssignment.ts  SelectionAttempt.ts  Student.ts  Vector.ts  Wave.ts
backend/src/routes/: admin.ts  assets.ts  auth.ts  community.ts  elections.ts  grievance.ts  infra.ts  lottery.ts  media.ts  outpass.ts  roommates.ts  rooms.ts  students.ts  waves.ts
backend/src/services/: cloudinary.ts  email.ts  engineBridge.ts  vectorizer.ts  waveScheduler.ts  websocket.ts
backend/src/utils/: parseIdentity.ts
database/: 001_schema.sql  002_indexes.sql  003_triggers.sql  seed.sql
database/migrations/: 001_schema.sql  002_indexes.sql
docs/: API_SPEC.md  ARCHITECTURE.md
engines/: CMakeLists.txt
engines/include/: common.h
engines/src/: conflict_resolver.cpp  gale_shapley.cpp  lottery_engine.cpp
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: HostelMap.jsx  Navbar.jsx  RoomGrid.jsx  SelectionFeedback.jsx  SettingsModal.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/hooks/: useSocket.js
frontend/src/pages/: AdminDashboard.jsx  (+11 more)
tests/: resolver_bench.cpp  stress_test.js
(+1 files in other folders)
